<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/navPostsFragment"
        android:background="@color/purple_500"
        android:icon="@drawable/ic_online_posts_24"
        android:title="@string/title_posts" />
    <item
        android:id="@+id/navEventsFragment"
        android:background="@color/purple_500"
        android:icon="@drawable/ic_online_event_24"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navUsersFragment"
        android:background="@color/purple_500"
        android:icon="@drawable/ic_baseline_user_24"
        android:title="@string/title_users" />

    <item
        android:id="@+id/navProfileFragment"
        android:background="@color/purple_500"
        android:icon="@drawable/ic_baseline_user_find_24"
        android:title="@string/title_profile" />

</menu>
