<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapview_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/enlarged_spacing"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="24dp"
        android:checkable="false"
        app:layout_constraintBottom_toTopOf="@id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_zoom_in_24"
        android:contentDescription="@string/upscale"
        android:backgroundTint="@color/white"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/large_spacing"
        android:layout_marginEnd="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@id/button_set_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_zoom_out_24"
        android:contentDescription="@string/downscale"
        android:backgroundTint="@color/white"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_set_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/set_point_button"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/button_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_location_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/location_button"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_location" />

</androidx.constraintlayout.widget.ConstraintLayout>
